# jwst-pure-parallel

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: run_ci.yml
src/jwpure/: .analyze.py.swp  _version.py  analyze.py  query.py  query_tmp.py  scripts.py
src/jwpure/data/: scenario_slots.csv
src/tests/: test_main.py
