[project]
name = "jwpure"
description = "Assess JWST pure parallel opportunities for specific observing requirements"
requires-python = ">=3.11"
dynamic = ["version"]
authors = [{ name = "Jeff Valenti"}]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "setuptools_scm",
  "astropy",
  "numpy>=2.0",
]

license-files = ["LICENSE"]

[project.readme]
file = "README.md"
content-type = "text/markdown"


[project.optional-dependencies]
tests = [
    "pytest",
    "ruff",
]


[project.urls]
repository = "https://github.com/spacetelescope/jwst-pure-parallel"
homepage = "https://github.com/spacetelescope/jwst-pure-parallel"
Tracker = "https://github.com/spacetelescope/jwst-pure-parallel/issues"


[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[tomli]>=6.2",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]
include = ["jwpure*"]

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools-scm
version_file = "src/jwpure/_version.py"


[tool.pytest.ini_options]
testpaths = [
  "src/jwpure",
  "src/tests",
  ]
# these are used to flex the pytest action
addopts = "-rvsa" # Report extra test summary info for all tests
norecursedirs = ["build"]
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"


[tool.ruff]
line-length = 120
indent-width = 4
exclude = [
    ".git",
    ".github",
    ".gitignore",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
]

[tool.ruff.lint]
preview = true
select = [ 'F', 'E101', 'E111', 'E112', 'E113', 'E115', 'E117',
           'E204', 'E223', 'E224', 'E242', 'E265', 'E273', 'E274', 'E275',
           'E301', 'E302', 'E305', 'E306', 'E401', 'E501', 'E502', 'E703',
           'E711', 'E713', 'E714', 'E72', 'E74',
           'W19', 'W29', 'W39', 'W605',
           'N804', 'N805', 'N807',
           'D206', 'D300', 'D301',
           'UP010', 'UP011', 'UP012', 'UP013', 'UP014', 'UP017', 'UP018', 'UP019',
           'UP02', 'UP030', 'UP031', 'UP033', 'UP034', 'UP035', 'UP036',
           'UP037', 'UP039', 'UP04',
           'PLE0100', 'PLE0101', 'PLE0116',
           'NPY',
           'RUF018',
           'E301', 'E302', 'E306', 'W505', 'D200', 'D212', 'RUF021' ]

# see also https://packaging.python.org/en/latest/guides/writing-pyproject-toml/